--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 bomberman_rl/agent_code/my_agent/*.joblib filter=lfs diff=lfs merge=lfs -text
+bomberman_rl/agent_code/my_agent/*.joblib* filter=lfs diff=lfs merge=lfs -text
