--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 bomberman_rl/agent_code/my_agent/*.joblib filter=lfs diff=lfs merge=lfs -text
 bomberman_rl/agent_code/my_agent/*.joblib* filter=lfs diff=lfs merge=lfs -text
+bomberman_rl/agent_code/null_agent/*.joblib* filter=lfs diff=lfs merge=lfs -text
